k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: 30tel
  labels:
    name: 30tel
    app: 30tel-nextjs
